css/style.css
/* 01. Basic Styles
 *  * =================================================================== */
@font-face {
  font-family: 'Yeezy';
  src: url("../fonts/yeezy_tstar-regular-webfont.ttf");
  src: url("../fonts/yeezy_tstar-regular-webfont.woff") format("woff");
  font-weight: normal; }
@font-face {
  font-family: 'Yeezy';
  src: url("../fonts/yeezy_tstar-bold-webfont.ttf");
  src: url("../fonts/yeezy_tstar-bold-webfont.woff") format("woff");
  font-weight: bold; }
@font-face {
  font-family: 'Yeezy';
  src: url("../fonts/yeezy_tstar-heavy-webfont.ttf");
  src: url("../fonts/yeezy_tstar-heavy-webfont.woff") format("woff");
  font-weight: bolder; }
@font-face {
  font-family: 'Yeezy';
  src: url("../fonts/yeezy_tstar-light-webfont.ttf");
  src: url("../fonts/yeezy_tstar-light-webfont.woff") format("woff");
  font-weight: lighter; }
* {
  margin: 0; }


 html {
    overflow-x: hidden;
    height: 100%;
    width: 100%;
 }
 body {
    /*font-family: 'Source Sans Pro', sans-serif;*/
    font-family: 'Yeezy';
    background:  black;
 }

 h1 {
    font-weight: bold;
 }

 h2 {
 }

 h5 {
    font-weight: 600;
 }

 a {
    cursor: pointer;
    color: #9bddff;
    text-decoration: none;
 }

 a:hover {
    text-decoration:none;
    color: #9bddff;
    opacity: 0.9;
 }

 hr {
    border-top: 5px solid #9bddff;
    width: 80px;
    padding-bottom: 20px;
 }

 .colour-splash {
    color: #9bddff;
 }

/* 02. Intro
 *  * =================================================================== */

 .section-intro {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: 66vh;
    margin-top: 0;
    margin-bottom: 0vh;
    position: relative;
    text-align: center;
    color: white;
    display: table;
}

.section-intro h1 {
    margin-top: 0;
    margin-bottom: 0;
}


 .section-picture {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: auto;
    margin-top: 2vh;
    margin-bottom: 2vh;
    position: relative;
    text-align: center;
    color: white;
    display: table;
}

.section-picture h1 {
    margin-top: 0;
    margin-bottom: 0;
}

 .outro {
    background: black no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    width: 100%;
    height: 10px;
    position: relative;
    text-align: center;
    color: white;
    display:table;
 }



/*.wrapper{display:block; background-color:black; position:relative; width:100%; margin:0; padding:0px; overflow: hidden; text-align:left; word-wrap:break-word;}*/


.header {
  background-color: black;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.header a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 25px 45px 25px 45px;
  text-decoration: none;
  font-size: 14px;
  line-height: 25px;
  border-radius: 4px;
}

.header a.logo {
  line-height: 25px;
  height: auto;
  padding: 0px;
}

/* Change the color of links on hover */
.header a:hover {
  background-color: #ddd;
  color: black;
}

.header-right {
  float: right;
}

@media screen and (max-width: 800px) {
  .header a {
    float: none;
    display: block;
    text-align: left;
  }
  .header-right {
    float: none;
    display: flex;
  }
}



/* Form Tools */

::-webkit-input-placeholder {
   color: #9bddff;
}

:-moz-placeholder { /* Firefox 18- */
   color: #9bddff;  
}

::-moz-placeholder {  /* Firefox 19+ */
   color: #9bddff;  
}

:-ms-input-placeholder {  
   color: #9bddff;  
}

form {
  padding: 5px;
  background: black;
  display: grid;
  color: white;
  text-align: left;
}

form input {
  border: none;
  background: transparent;
  border-bottom: 1px solid #9bddff;
  outline: none;
  font-size: 18px;
  text-align: left;
}

form button {
  background: black;
  border: 14;
  border-color: #9bddff;
  color: white;

}


/* Rows
--------------------------------------------------------------------------------------------------------------- */
.row0, .row0 a{}
.row1{padding:80px 0 0 0;}
.row2, .row2 a{}
.row3, .row3 a{}
.row4, .row4 a{}
.row5, .row5 a{}

/* Max Wrapper Width - Laptop, Desktop etc.
--------------------------------------------------------------------------------------------------------------- */
@media screen and (min-width:1140px){
    .hoc{max-width:1140px;}
}

@media screen and (min-width:978px) and (max-width:1140px){
    .hoc{max-width:95%;}
}



.hoc{display:block; margin:0 auto;}


.clear, .group{display:block;}
.clear::before, .clear::after, .group::before, .group::after{display:table; content:"";}
.clear, .clear::after, .group, .group::after{clear:both;}

a{outline:none; text-decoration:none;}

.fl_left, .imgl{float:left;}
.fl_right, .imgr{float:right;}

img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;}
.imgl{margin:0 15px 10px 0; clear:left;}
.imgr{margin:0 0 10px 15px; clear:right;}
.imgover{display:inline-block; position:relative; max-width:100%;}
.imgover::before, .imgover::after{display:block; position:absolute; content:""; text-align:center; opacity:0;}
.imgover::before{top:0; right:0; bottom:0; left:0;}
.imgover::after{top:50%; left:50%; width:50px; height:50px; line-height:50px; margin:-25px 0 0 -25px; font-family:"Font Awesome\ 5 Free"; font-weight:900; content:"\f067";/* fa-plus */ font-size:28px;}
.imgover:hover::before, .imgover:hover::after{opacity:1;}

.col-md-12 {
    top: 30%;
}
.intro {
    background:  black;
    vertical-align: middle;
    text-align: left;
    height: 100vh;
    position: relative;
}

.bottom {
    position: absolute;
    left: 50%;
    bottom: 20%;
}


.intro .row {
    margin-right: 0;
    margin-left:0;
}

.intro h1 {
    font-size: 84px;
}

.intro h2 {
    font-size: 50px;
}
/* ... */

